# cooper

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh
src/: Connection.cpp  config.cpp  connection.cpp  cooper.cpp  cooper.hpp  main.cpp  readconfig.cpp  stringutils.cpp  stringutils.hpp
test/: CMakeLists.txt  config_test.cpp  stringutils_test.cpp
